@@ -8,7 +8,6 @@
 
 KDE_OPTIONS=noautodist
 
-AM_CXXFLAGS = '-DREGINA_PYLIBDIR="$(pkglibdir)/python"'
 INCLUDES = @ENGINE_INCLUDES@ $(all_includes) @BOOST_PYTHON_INCLUDES@
 
 noinst_LTLIBRARIES = libregina-kdepython.la
