@@ -8,7 +8,6 @@
 
 KDE_OPTIONS=noautodist
 
-AM_CXXFLAGS = '-DREGINA_DATADIR="$(pkgdatadir)"'
 INCLUDES = @ENGINE_INCLUDES@ $(all_includes) -I$(top_srcdir)/kdeui/src/common
 
 noinst_HEADERS = \
